Fixed memory ownership issues.

--- a/CK.MQTT.Common/CK.MQTT.Common.csproj
+++ b/CK.MQTT.Common/CK.MQTT.Common.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
+	<Import Project="..\Common\Shared.props" />
+	<PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
     <Description>Interfaces and Implementations of CK.MQTT.Client and CK.MQTT.Server.</Description>
