--- a/CK.MQTT.Client.Abstractions/CK.MQTT.Client.Abstractions.csproj
+++ b/CK.MQTT.Client.Abstractions/CK.MQTT.Client.Abstractions.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\Common\Shared.props" />
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
