--- a/CK.MQTT.Client.Abstractions/CK.MQTT.Client.Abstractions.csproj
+++ b/CK.MQTT.Client.Abstractions/CK.MQTT.Client.Abstractions.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor" Version="13.2.1--0000-develop" />
+    <PackageReference Include="CK.ActivityMonitor" Version="13.3.0" />
   </ItemGroup>
 
 </Project>
