--- a/CK.MQTT.Client.Abstractions/CK.MQTT.Client.Abstractions.csproj
+++ b/CK.MQTT.Client.Abstractions/CK.MQTT.Client.Abstractions.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.ActivityMonitor" Version="13.3.0" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
   </ItemGroup>
 
 </Project>
