--- a/Tests/CK.MQTT.Client.Abstractions.Tests/CK.MQTT.Client.Abstractions.Tests.csproj
+++ b/Tests/CK.MQTT.Client.Abstractions.Tests/CK.MQTT.Client.Abstractions.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CK.MQTT.Client.Abstractions\CK.MQTT.Client.Abstractions.csproj" />
+    <ProjectReference Include="..\..\CK.MQTT.Client.Abstractions\CK.MQTT.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
