Switching pc so i stop destroying my neck.

--- a/CK.MQTT.Common/CK.MQTT.Common.csproj
+++ b/CK.MQTT.Common/CK.MQTT.Common.csproj
@@ -18,5 +18,8 @@
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.Client.Abstractions\CK.MQTT.Abstractions.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Processes\" />
+  </ItemGroup>
 
 </Project>
