--- a/CK.MQTT.Client.Abstractions/CK.MQTT.Abstractions.csproj
+++ b/CK.MQTT.Client.Abstractions/CK.MQTT.Abstractions.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="13.3.0" />
+    <PackageReference Include="CK.Core" Version="13.2.0" />
     <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
   </ItemGroup>
 
