--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\Common\Shared.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,6 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CK.MQTT.Common\CK.MQTT.Common.csproj" />
+    <ProjectReference Include="..\CK.MQTT.Common.MQTT.Common.csproj" />
   </ItemGroup>
 </Project>
