--- a/CK.MQTT.Common/CK.MQTT.Common.csproj
+++ b/CK.MQTT.Common/CK.MQTT.Common.csproj
@@ -16,7 +16,7 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="13.3.0" />
+    <PackageReference Include="CK.ActivityMonitor.StandardSender" Version="13.3.0" />
     <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
     <PackageReference Include="System.Linq.Async" Version="4.1.1" />
   </ItemGroup>
