--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -8,4 +8,8 @@
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.Common\CK.MQTT.Common.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="OutgoingPackets\v5\" />
+  </ItemGroup>
 </Project>
