--- a/CK.MQTT.Common/CK.MQTT.Common.csproj
+++ b/CK.MQTT.Common/CK.MQTT.Common.csproj
@@ -6,14 +6,6 @@
     <Nullable>enable</Nullable>
     <Description>Interfaces and Implementations of CK.MQTT.Client and CK.MQTT.Server.</Description>
   </PropertyGroup>
-	<ItemGroup>
-	  <Compile Remove="PacketWriter\**" />
-	  <Compile Remove="Processes\**" />
-	  <EmbeddedResource Remove="PacketWriter\**" />
-	  <EmbeddedResource Remove="Processes\**" />
-	  <None Remove="PacketWriter\**" />
-	  <None Remove="Processes\**" />
-	</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CK.ActivityMonitor.StandardSender" Version="13.3.0" />
@@ -21,7 +13,7 @@
     <PackageReference Include="System.Linq.Async" Version="4.1.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CK.MQTT.Client.Abstractions\CK.MQTT.Abstractions.csproj" />
+    <ProjectReference Include="..\CK.MQTT.Abstractions\CK.MQTT.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
