Lots of refactoring, broke a bit the APIs, added time abstractions, connections tests still dont pass.

--- a/CK.MQTT.Abstractions/CK.MQTT.Abstractions.csproj
+++ b/CK.MQTT.Abstractions/CK.MQTT.Abstractions.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\Common\Shared.props" />
+  <Import Project="..\Common\Mqtt.props" />
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
