--- a/CK.MQTT.Common/CK.MQTT.Common.csproj
+++ b/CK.MQTT.Common/CK.MQTT.Common.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="..\Common\Shared.props" />
+	<Import Project="..\Common\Mqtt.props" />
 	<PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
     <Description>Interfaces and Implementations of CK.MQTT.Client and CK.MQTT.Server.</Description>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="13.3.0" />
     <PackageReference Include="CK.ActivityMonitor.StandardSender" Version="13.3.0" />
     <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
     <PackageReference Include="System.Linq.Async" Version="4.1.1" />
