--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,15 @@
-- name: Run Infer#      
-  uses: microsoft/infersharpaction@v0.2
-  id: runinfersharp
-  with:
-    binary-path: 'CK.MQTT.Client/bin/Release/netcoreapp3.1'
-- name: Infer# analysis results
-  run: echo "${{ steps.runinfersharp.outputs.results }}"
+name: Lint
+
+on: push
+
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: InferSharp
+        uses: microsoft/infersharpaction@v0.2
+        id: runinfersharp
+        with:
+          binary-path: 'CK.MQTT.Client\bin\Release\netcoreapp3.1'
+      - name: Infer# analysis results
+        run: echo "${{ steps.runinfersharp.outputs.results }
