--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           binary-path: 'CK.MQTT.Client\bin\Release\netcoreapp3.1'
       - name: Infer# analysis results
-        run: echo "${{ steps.runinfersharp.outputs.results }
+        run: echo "${{ steps.runinfersharp.outputs.results }}
