--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,6 @@ jobs:
         uses: microsoft/infersharpaction@v0.2
         id: runinfersharp
         with:
-          binary-path: 'CK.MQTT.Client\bin\Release\netcoreapp3.1'
+          binary-path: 'CK.MQTT.Client/bin/Release/netcoreapp3.1'
       - name: Infer# analysis results
         run: echo "${{ steps.runinfersharp.outputs.results }}
