--- a/CK.MQTT.Server/CK.MQTT.Server.csproj
+++ b/CK.MQTT.Server/CK.MQTT.Server.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Description>MQTT server implementation (not yet available).</Description>
   </PropertyGroup>
 
   <ItemGroup>
