--- a/.editorconfig
+++ b/.editorconfig
@@ -63,3 +63,6 @@ dotnet_style_require_accessibility_modifiers = omit_if_default:silent
 dotnet_diagnostic.CA1034.severity = none
 # Motive: Nested types can be used to design a good API.
 # /Signature-Code .editorconfig
+
+# IDE0058: Expression value is never used
+csharp_style_unused_value_expression_statement_preference = discard_variable:warning
