--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <PackageReference Include="NuGet.Protocol" Version="5.3.0" />
     <PackageReference Include="NuGet.Credentials" Version="5.3.0" />
-    <PackageReference Include="CK.Text" Version="9.0.1--0006-develop" />
+    <PackageReference Include="CK.Text" Version="9.0.1" />
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.11.1" />
     <PackageReference Include="NUnit.Runners.Net4" Version="2.6.4" />
     <PackageReference Include="SimpleGitVersion.Cake" Version="2.1.0" />
