--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -6,11 +6,13 @@
     <IsPackable>False</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NuGet.Protocol" Version="5.3.0" />
-    <PackageReference Include="NuGet.Credentials" Version="5.3.0" />
-    <PackageReference Include="CK.Text" Version="9.0.1" />
+    <PackageReference Include="NuGet.Protocol" Version="5.5.1" />
+    <PackageReference Include="NuGet.Credentials" Version="5.5.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CK.Text" Version="9.0.0" />
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.11.1" />
     <PackageReference Include="NUnit.Runners.Net4" Version="2.6.4" />
-    <PackageReference Include="SimpleGitVersion.Cake" Version="2.1.0" />
+    <PackageReference Include="SimpleGitVersion.Cake" Version="4.0.2" />
   </ItemGroup>
 </Project>
