--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
     <Description>Concrete implementations of CK.MQTT.Abstractions.</Description>
+    <Features>strict</Features>
   </PropertyGroup>
 
   <ItemGroup>
