--- a/TestHelper.config
+++ b/TestHelper.config
@@ -3,6 +3,6 @@
     <appSettings>
       <add key="Monitor/LogToConsole" value="true" />
       <add key="Monitor/LogToTextFile" value="true" />
-      <add key="Monitor/LogLevel" value="Debug" />
+      <add key="Monitor/LogLevel" value="Trace" />
     </appSettings>
 </configuration>
