--- a/SimpleClientTest/SimpleClientTest.csproj
+++ b/SimpleClientTest/SimpleClientTest.csproj
@@ -20,8 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!--<ProjectReference Include="..\CK.MQTT.Client\CK.MQTT.Client.csproj" />-->
-    <PackageReference Include="CK.MQTT.Client" Version="0.7.11" />
+    <ProjectReference Include="..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
   </ItemGroup>
 
 </Project>
