--- a/stryker-config.json
+++ b/stryker-config.json
@@ -1,17 +1,13 @@
 {
-  "stryker-config":
-  {
-      "project-file": "ExampleProject.csproj",
-      "ignore-methods": [
-          "Debug.Assert"
-      ],
-      "solution-path": "CK-MQTT.sln",
-      "test-projects": [
-        "Tests/CK.MQTT.Basic.Tests/CK.MQTT.Basic.Tests.csproj",
-        "Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj",
-        "Tests/CK.MQTT.Basic.Tests/CK.MQTT.Basic.Tests.csproj",
-        "Tests/CK.MQTT.P2P.Tests/CK.MQTT.P2P.Tests"
-
-      ]
+  "stryker-config": {
+    "ignore-methods": [
+      "Debug.Assert"
+    ],
+    "project-path": "CK.MQTT.Client/CK.MQTT.Client.csproj",
+    "test-projects": [
+      "Tests/CK.MQTT.Basic.Tests/CK.MQTT.Basic.Tests.csproj",
+      "Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj",
+      "Tests/CK.MQTT.P2P.Tests/CK.MQTT.P2P.Tests.csproj"
+    ]
   }
 }
