--- a/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
+++ b/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5</TargetFramework>
     <LangVersion>9</LangVersion>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
+    <AnalysisLevel>latest</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
+    <ProjectReference Include="..\..\CK.MQTT.P2P\CK.MQTT.P2P.csproj" />
   </ItemGroup>
 
 </Project>
