Another bugfix in tests.

--- a/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
+++ b/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5</TargetFramework>
@@ -19,7 +19,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
-    <ProjectReference Include="..\..\CK.MQTT.P2P\CK.MQTT.P2P.csproj" />
+    <ProjectReference Include="..\..\CK.MQTT.Common\CK.MQTT.Common.csproj" />
+    <ProjectReference Include="..\..\CK.MQTT.Abstractions\CK.MQTT.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
