--- a/CK.MQTT.Common/CK.MQTT.Common.csproj
+++ b/CK.MQTT.Common/CK.MQTT.Common.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<Import Project="..\Common\Mqtt.props" />
 	<PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6</TargetFramework>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
     <Description>Common implementations of CK.MQTT.Client and CK.MQTT.Server.</Description>
@@ -9,12 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="13.3.2" />
-    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0-preview4" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="14.2.1" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.Abstractions\CK.MQTT.Abstractions.csproj" />
   </ItemGroup>
-
 </Project>
