--- a/SimpleP2PClientTest/SimpleP2PClientTest.csproj
+++ b/SimpleP2PClientTest/SimpleP2PClientTest.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6</TargetFramework>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -11,6 +11,6 @@
     <ProjectReference Include="..\CK.MQTT.P2P\CK.MQTT.P2P.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="13.0.1" />
+    <PackageReference Include="CK.Monitoring" Version="14.2.1" />
   </ItemGroup>
 </Project>
