--- a/CK.MQTT.Server/CK.MQTT.Server.csproj
+++ b/CK.MQTT.Server/CK.MQTT.Server.csproj
@@ -6,6 +6,7 @@
     <Description>MQTT server implementation (not yet available).</Description>
     <Nullable>enable</Nullable>
     <Features>strict</Features>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
