--- a/SimpleP2PClientTest/SimpleP2PClientTest.csproj
+++ b/SimpleP2PClientTest/SimpleP2PClientTest.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6</TargetFramework>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
