More int-uint fixes, fixed a bug in Disconnect and  ping tests.

--- a/SimpleClientTest/SimpleClientTest.csproj
+++ b/SimpleClientTest/SimpleClientTest.csproj
@@ -2,22 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="15.0.0-r02" />
+    <PackageReference Include="CK.Monitoring" Version="15.0.0-r02-00-0001-develop" />
   </ItemGroup>
 
   <ItemGroup>
