--- a/CK.MQTT.Abstractions/CK.MQTT.Abstractions.csproj
+++ b/CK.MQTT.Abstractions/CK.MQTT.Abstractions.csproj
@@ -7,7 +7,7 @@
     <LangVersion>9</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor" Version="15.0.0-r02" />
+    <PackageReference Include="CK.ActivityMonitor" Version="15.0.0-r02-00-0001-develop" />
     <PackageReference Include="System.IO.Pipelines" Version="6.0.1" />
   </ItemGroup>
 </Project>
