--- a/SimpleP2PClientTest/SimpleP2PClientTest.csproj
+++ b/SimpleP2PClientTest/SimpleP2PClientTest.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
@@ -12,6 +12,6 @@
     <ProjectReference Include="..\CK.MQTT.P2P\CK.MQTT.P2P.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="15.0.0-r02-00-0001-develop" />
+    <PackageReference Include="CK.Monitoring" Version="14.2.2" />
   </ItemGroup>
 </Project>
