Revert "Revert this to get back on .NET 6."
This reverts commit 3ac8bb804a28760b620dad31e5ddca8fdd1051dc.

--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\Common\Mqtt.props" />
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>9</LangVersion>
     <Description>Concrete implementations of CK.MQTT.Abstractions.</Description>
