--- a/Tests/CK.MQTT.P2P.Tests/CK.MQTT.P2P.Tests.csproj
+++ b/Tests/CK.MQTT.P2P.Tests/CK.MQTT.P2P.Tests.csproj
@@ -7,16 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-    <PackageReference Include="NUnit" Version="3.13.2" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CK.MQTT.Abstractions\CK.MQTT.Abstractions.csproj" />
-    <ProjectReference Include="..\..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
-    <ProjectReference Include="..\..\CK.MQTT.Common\CK.MQTT.Common.csproj" />
     <ProjectReference Include="..\..\CK.MQTT.P2P\CK.MQTT.P2P.csproj" />
+    <ProjectReference Include="..\CK.MQTT.Client.Tests\CK.MQTT.Client.Tests.csproj" />
   </ItemGroup>
 
 </Project>
