--- a/CK.MQTT.P2P/CK.MQTT.P2P.csproj
+++ b/CK.MQTT.P2P/CK.MQTT.P2P.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
+    <ProjectReference Include="..\CK.MQTT.Client\CK.MQTT.LowLevelClient.csproj" />
   </ItemGroup>
 
 </Project>
