--- a/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
+++ b/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6</TargetFramework>
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
+        <ProjectReference Include="..\..\CK.MQTT.Client\CK.MQTT.LowLevelClient.csproj" />
         <ProjectReference Include="..\..\CK.MQTT.Common\CK.MQTT.Common.csproj" />
         <ProjectReference Include="..\..\CK.MQTT.Abstractions\CK.MQTT.Abstractions.csproj" />
     </ItemGroup>
