--- a/Tests/CK.MQTT.P2P.Tests/CK.MQTT.P2P.Tests.csproj
+++ b/Tests/CK.MQTT.P2P.Tests/CK.MQTT.P2P.Tests.csproj
@@ -14,4 +14,11 @@
     <ProjectReference Include="..\CK.MQTT.Client.Tests\CK.MQTT.Client.Tests.csproj" />
   </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="6.2.0" />
+        <PackageReference Include="nunit" Version="3.13.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.2.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    </ItemGroup>
+
 </Project>
