--- a/CK.MQTT.Server/CK.MQTT.Server.csproj
+++ b/CK.MQTT.Server/CK.MQTT.Server.csproj
@@ -1,17 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <Import Project="..\Common\Mqtt.props" />
 
     <PropertyGroup>
-    <TargetFramework>net6</TargetFramework>
-    <LangVersion>9</LangVersion>
-    <Description>MQTT server implementation (not yet available).</Description>
-    <Nullable>enable</Nullable>
-    <Features>strict</Features>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+        <TargetFramework>net6</TargetFramework>
+        <Description>MQTT server implementation (not yet available).</Description>
+        <Nullable>enable</Nullable>
+        <Features>strict</Features>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\CK.MQTT.P2P\CK.MQTT.P2P.csproj" />
-  </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
+    </ItemGroup>
 </Project>
