--- a/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
+++ b/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
@@ -16,9 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
-        <ProjectReference Include="..\..\CK.MQTT.Common\CK.MQTT.Common.csproj" />
-        <ProjectReference Include="..\..\CK.MQTT.Abstractions\CK.MQTT.Abstractions.csproj" />
+        <ProjectReference Include="..\..\CK.MQTT.Server\CK.MQTT.Server.csproj" />
     </ItemGroup>
 
 </Project>
