--- a/CK.MQTT.LowLevelClient/CK.MQTT.LowLevelClient.csproj
+++ b/CK.MQTT.LowLevelClient/CK.MQTT.LowLevelClient.csproj
@@ -9,6 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CK.MQTT.Common\CK.MQTT.Common.csproj" />
+        <PackageReference Include="CommunityToolkit.HighPerformance" Version="7.1.2" />
     </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\CK.MQTT.Abstractions\CK.MQTT.Abstractions.csproj" />
+    </ItemGroup>
+
 </Project>
