--- a/CK.MQTT.LowLevelClient/CK.MQTT.LowLevelClient.csproj
+++ b/CK.MQTT.LowLevelClient/CK.MQTT.LowLevelClient.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.HighPerformance" Version="7.1.2" />
+        <PackageReference Include="Pipelines.Sockets.Unofficial" Version="2.2.2" />
     </ItemGroup>
 
     <ItemGroup>
