--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="NuGet.Credentials" Version="5.5.1" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Text" Version="9.0.3" />
+    <PackageReference Include="CK.Text" Version="9.0.4--0001-develop" />
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.15.0" />
     <PackageReference Include="NUnit.Runners.Net4" Version="2.6.4" />
     <PackageReference Include="SimpleGitVersion.Cake" Version="4.0.2" />
