--- a/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
+++ b/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="CK.Testing.Monitoring" Version="2.2.2" />
+        <PackageReference Include="CK.Testing.Monitoring" Version="3.0.0-r08-00-0001-develop" />
         <PackageReference Include="FluentAssertions" Version="6.6.0" />
         <PackageReference Include="nunit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
