--- a/NuGet.config
+++ b/NuGet.config
@@ -4,6 +4,7 @@
 
     <add key="Signature-OpenSource" value="https://pkgs.dev.azure.com/Signature-OpenSource/Feeds/_packaging/NetCore3/nuget/v3/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 
 </configuration>
