--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,9 +2,8 @@
 environment:
   CODECAKEBUILDER_SECRET_KEY:
     secure: 8VAzdXgUQaJyFoU3WLf2iPFV/8zPDm9qV4TfOpx8/rg=
-install: []
 version: build{build}
-image: Visual Studio 2019
+image: Visual Studio 2022
 clone_folder: C:\CKli-World\IoT\CK-MQTT
 branches:
   only:
@@ -13,12 +12,7 @@ branches:
 build_script:
   - dotnet run --project CodeCakeBuilder -nointeraction
 test: off
-artifacts:
-  - path: '**\*.log'
-    name: Log file
-  - path: '**\*.trx'
-    name: Visual studio test results file
-  - path: '**\Tests\**\TestResult*.xml'
-    name: NUnit tests result files
-  - path: '**Tests\**\Logs\**\*'
-    name: Log files
+on_finish:
+  - ps: 'Get-ChildItem -Recurse *.log | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name -DeploymentName ''Log files'' }'
+  - ps: 'Get-ChildItem -Recurse **\Tests\**\TestResult*.xml | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name -DeploymentName ''NUnit tests result files'' }'
+  - ps: 'Get-ChildItem -Recurse **Tests\**\Logs\**\* | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name -DeploymentName ''Log files'' }'
