Added VS Threading analysers to tests.

--- a/Tests/CK.MQTT.Basic.Tests/CK.MQTT.Basic.Tests.csproj
+++ b/Tests/CK.MQTT.Basic.Tests/CK.MQTT.Basic.Tests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
+    <Import Project="..\..\Common\Shared.props" />
+    <PropertyGroup>
     <TargetFramework>net6</TargetFramework>
 
     <IsPackable>false</IsPackable>
