--- a/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
+++ b/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+    <Import Project="..\..\Common\Shared.props" />
     <PropertyGroup>
         <TargetFramework>net6</TargetFramework>
         <LangVersion>9</LangVersion>
