--- a/CK.MQTT.LowLevelClient/CK.MQTT.LowLevelClient.csproj
+++ b/CK.MQTT.LowLevelClient/CK.MQTT.LowLevelClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <Import Project="..\Common\Mqtt.props" />
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.HighPerformance" Version="7.1.2" />
+        <PackageReference Include="Nerdbank.Streams" Version="2.8.61" />
     </ItemGroup>
 
     <ItemGroup>
