CI build: Upgrading dependencies:
NuGet:CK.StObj.Model/20.0.1--0008-develop
NuGet:CK.Monitoring.Hosting/15.1.1--0001-develop
NuGet:CK.StObj.Model/20.0.1--0008-develop
NuGet:CK.Testing.Monitoring/4.0.1--0001-develop
NuGet:CK.ActivityMonitor.SimpleSender/15.1.1--0001-develop
NuGet:CK.PerfectEvent/15.1.1--0001-develop
NuGet:cksetup/16.0.1--0001-develop.

--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -1,12 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\Common\MQTT.props" />
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.1.0" />
-    <PackageReference Include="CK.PerfectEvent" Version="15.1.0" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.1.1--0001-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="15.1.1--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
