Releasing 0.15.0. Upgrading release dependencies: NuGet:CK.StObj.Model/21.0.0, NuGet:CK.Monitoring.Hosting/16.0.0, NuGet:CK.StObj.Model/21.0.0, NuGet:CK.Testing.Monitoring/5.0.0, NuGet:CK.ActivityMonitor.SimpleSender/16.0.0, NuGet:CK.PerfectEvent/16.0.0, NuGet:cksetup/17.0.0.

--- a/CK.MQTT.LocalMQTTDemiServer/CK.MQTT.LocalMQTTDemiServer.csproj
+++ b/CK.MQTT.LocalMQTTDemiServer/CK.MQTT.LocalMQTTDemiServer.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
-    <PackageReference Include="CK.StObj.Model" Version="20.0.1--0011-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="21.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.Server\CK.MQTT.Server.csproj" />
