--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -6,8 +6,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring.Hosting" Version="15.1.1--0002-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="20.0.1--0011-develop" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="16.0.0" />
+    <PackageReference Include="CK.StObj.Model" Version="21.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
