CI build: Upgrading dependencies:
NuGet:CK.StObj.Model/21.0.1--0001-develop
NuGet:CK.Monitoring.Hosting/16.0.1--0001-develop
NuGet:CK.StObj.Model/21.0.1--0001-develop
NuGet:CK.Testing.Monitoring/5.0.1--0001-develop
NuGet:CK.ActivityMonitor.SimpleSender/16.0.1--0001-develop
NuGet:CK.PerfectEvent/16.0.1--0001-develop
NuGet:cksetup/17.0.1--0001-develop.

--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="16.0.0" />
-    <PackageReference Include="CK.PerfectEvent" Version="16.0.0" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="16.0.1--0001-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="16.0.1--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
